fix overflow in iphone 1.0

--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ body {
   overflow-x: hidden;
 }
 
+html, body {
+    overflow-x: hidden;
+    position: relative;
+    height: 100%;
+}
+
 header {
     background: url("images/landing.jpg");
     background-size: cover;
